--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,4 +3,11 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/altlocdb
 spring.datasource.username=dev
 spring.datasource.password=dev
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database=POSTGRESQL
+spring.security.user.name=dev
+spring.security.user.password=dev
+backend.jwt.secret=KJKd3fh$ehsudhf43tj#ghGHJg4w3t3
+backend.jwt.expiration=86400000
+
 
