--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 
-backend.jwt.secret=KJKd3fh$ehsudhf43tj#ghGHJg4w3t3
+backend.jwt.secret=fgffdhfejkfe4t4yw34y98yeuihfjseafjhdsjfsdaf
 backend.jwt.expiration=86400000
 
 
