--- a/backend/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/backend/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,5 +1,12 @@
-{"properties": [{
-  "name": "backend.jwt.secret",
-  "type": "java.lang.String",
-  "description": "A description for 'backend.jwt.secret'"
-}]}
+{"properties": [
+  {
+    "name": "backend.jwt.secret",
+    "type": "java.lang.String",
+    "description": "A description for 'backend.jwt.secret'"
+  },
+  {
+    "name": "backend.jwt.expiration",
+    "type": "java.lang.String",
+    "description": "A description for 'backend.jwt.expiration'"
+  }
+]}
