--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -15,6 +15,9 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 
 backend.jwt.secret=fgffdhfejkfe4t4yw34y98yeuihfjseafjhdsjfsdaf
-backend.jwt.expiration=86400000
+backend.jwt.expiration=120000
 
+
+
+#86400000
 
