--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -16,8 +16,7 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 
 backend.jwt.secret=fgffdhfejkfe4t4yw34y98yeuihfjseafjhdsjfsdaf
 backend.jwt.expiration=120000
+backend.jwt.refreshExpiration=300000
 
 
-
-#86400000
 
