--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=4000
+
 spring.application.name=backend
 spring.datasource.url=jdbc:postgresql://localhost:5432/altlocdb
 spring.datasource.username=dev
