--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -72,10 +72,10 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
       		<groupId>org.springframework.boot</groupId>
       		<artifactId>spring-boot-starter-oauth2-authorization-server</artifactId>
-    	</dependency>
+    	</dependency> -->
 		<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api -->
 		<dependency>
     		<groupId>io.jsonwebtoken</groupId>
@@ -93,6 +93,11 @@
     		<artifactId>jjwt-jackson</artifactId>
     		<version>0.11.5</version>
   		</dependency>
+		<dependency>
+    		<groupId>io.minio</groupId>
+    		<artifactId>minio</artifactId>
+    		<version>8.5.17</version>
+		</dependency>
 	</dependencies>
 
 	<build>
