--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -20,5 +20,13 @@ backend.jwt.secret=fgffdhfejkfe4t4yw34y98yeuihfjseafjhdsjfsdaf
 backend.jwt.expiration=900000
 backend.jwt.refreshExpiration=604800000
 
+minio.endpoint=http://localhost:9000
+minio.user.name=altlocdev
+minio.user.password=miniopswd
+minio.bucket=altloc
+minio.accessKey=dev
+minio.secretKey=dev
+minio.port=9000
+
 
 
