--- a/backend/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/backend/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,12 +1,19 @@
-{"properties": [
-  {
-    "name": "backend.jwt.secret",
-    "type": "java.lang.String",
-    "description": "A description for 'backend.jwt.secret'"
-  },
-  {
-    "name": "backend.jwt.expiration",
-    "type": "java.lang.String",
-    "description": "A description for 'backend.jwt.expiration'"
-  }
-]}
+{
+  "properties": [
+    {
+      "name": "backend.jwt.secret",
+      "type": "java.lang.String",
+      "description": "A description for 'backend.jwt.secret'"
+    },
+    {
+      "name": "backend.jwt.expiration",
+      "type": "java.lang.String",
+      "description": "A description for 'backend.jwt.expiration'"
+    },
+    {
+      "name": "minio.secretKey",
+      "type": "java.lang.String",
+      "description": "A description for 'minio.secretKey'"
+    }
+  ]
+}
