--- a/database/docker-compose.dev.yml
+++ b/database/docker-compose.dev.yml
@@ -21,8 +21,8 @@ services:
       - "9000:9000"
       - "9090:9090"
     environment:
-      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
-      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
+      MINIO_ROOT_USER: "altlocdev"
+      MINIO_ROOT_PASSWORD: "miniopswd"
     volumes:
       - minio-data:/data
 
