--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -24,8 +24,8 @@ minio.endpoint=http://localhost:9000
 minio.user.name=altlocdev
 minio.user.password=miniopswd
 minio.bucket=altloc
-minio.accessKey=dev
-minio.secretKey=dev
+minio.accessKey=I1u2TcZrmsmRllIVFTw2
+minio.secretKey=AqjfAfHKiwiRBIYrj7m5q1Mi9Ju8xigoqJr4bN9P
 minio.port=9000
 
 
