--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -47,6 +47,10 @@
     		<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 		<dependency>
+   			 <groupId>org.springframework.boot</groupId>
+   			 <artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
@@ -82,7 +86,12 @@
     		<artifactId>jjwt-api</artifactId>
     		<version>0.11.5</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/com.sun.mail/jakarta.mail -->
+		<dependency>
+    		<groupId>com.sun.mail</groupId>
+    		<artifactId>jakarta.mail</artifactId>
+    		<version>2.0.1</version>
+		</dependency>
   		<dependency>
     		<groupId>io.jsonwebtoken</groupId>
     		<artifactId>jjwt-impl</artifactId>
