--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -28,5 +28,10 @@ minio.accessKey=I1u2TcZrmsmRllIVFTw2
 minio.secretKey=AqjfAfHKiwiRBIYrj7m5q1Mi9Ju8xigoqJr4bN9P
 minio.port=9000
 
-
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=elspero.project@gmail.com
+spring.mail.password=vodg qeod lmzd zknb
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
