--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -31,3 +31,15 @@ build/
 
 ### VS Code ###
 .vscode/
+
+
+
+### Spring Boot ###
+application.properties
+application.yml
+application-prod.properties
+.env
+
+
+!application.properties.example
+!application.yml.example
