--- a/database/docker-compose.dev.yml
+++ b/database/docker-compose.dev.yml
@@ -12,6 +12,8 @@ services:
       POSTGRES_USER: "dev"
       POSTGRES_PASSWORD: "dev"
       POSTGRES_DB: "altlocdb"
+    networks:
+      - dev 
 
   minio:
     image: quay.io/minio/minio
@@ -25,6 +27,30 @@ services:
       MINIO_ROOT_PASSWORD: "miniopswd"
     volumes:
       - minio-data:/data
+    networks:
+      - dev 
+
+#   backend:
+#     build: 
+#       context: .
+#       dockerfile: Dockerfile
+#       target: backend
+#       container_name: spring-backend
+#     environment:
+#       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/altlocdb
+#       SPRING_DATASOURCE_USERNAME: dev
+#       SPRING_DATASOURCE_PASSWORD: dev
+#     depends_on:
+#       - postgres
+#       - minio
+#     ports:
+#       - "4000:4000"
+#     networks:
+#       - dev 
+
+# networks:
+#   dev :
+#     external: true
 
 volumes:
   postgres-data:
