chore: update Dockerfile with multi-stage build and Java 21
- Added multi-stage build to separate build and runtime environments
- Used Maven 3.9.6 with Eclipse Temurin 21 for building the project
- Switched runtime to OpenJDK 21
- Cached dependencies using [INFO] Scanning for projects...
Downloading from central: https://repo.maven.apache.org/maven2/org/apache/maven/plugins/maven-clean-plugin/3.2.0/maven-clean-plugin-3.2.0.pom
Progress (1): 1.4/5.3 kBProgress (1): 2.8/5.3 kBProgress (1): 4.1/5.3 kBProgress (1): 5.3 kB                        Downloaded from central: https://repo.maven.apache.org/maven2/org/apache/maven/plugins/maven-clean-plugin/3.2.0/maven-clean-plugin-3.2.0.pom (5.3 kB at 9.8 kB/s)
Downloading from central: https://repo.maven.apache.org/maven2/org/apache/maven/plugins/maven-plugins/35/maven-plugins-35.pom
Progress (1): 1.4/9.9 kBProgress (1): 2.8/9.9 kBProgress (1): 4.1/9.9 kBProgress (1): 5.5/9.9 kBProgress (1): 6.9/9.9 kBProgress (1): 8.3/9.9 kBProgress (1): 9.7/9.9 kBProgress (1): 9.9 kB                        Downloaded from central: https://repo.maven.apache.org/maven2/org/apache/maven/plugins/maven-plugins/35/maven-plugins-35.pom (9.9 kB at 174 kB/s)
Downloading from central: https://repo.maven.apache.org/maven2/org/apache/maven/maven-parent/35/maven-parent-35.pom
Progress (1): 1.4/45 kBProgress (1): 2.8/45 kBProgress (1): 4.1/45 kBProgress (1): 5.5/45 kBProgress (1): 6.9/45 kBProgress (1): 8.3/45 kBProgress (1): 9.7/45 kBProgress (1): 11/45 kB Progress (1): 12/45 kBProgress (1): 14/45 kBProgress (1): 15/45 kBProgress (1): 17/45 kBProgress (1): 18/45 kBProgress (1): 19/45 kBProgress (1): 21/45 kBProgress (1): 22/45 kBProgress (1): 23/45 kBProgress (1): 25/45 kBProgress (1): 26/45 kBProgress (1): 28/45 kBProgress (1): 29/45 kBProgress (1): 30/45 kBProgress (1): 32/45 kBProgress (1): 33/45 kBProgress (1): 34/45 kBProgress (1): 36/45 kBProgress (1): 37/45 kBProgress (1): 39/45 kBProgress (1): 40/45 kBP

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,7 +11,7 @@ services:
       POSTGRES_PASSWORD: "dev"
       POSTGRES_DB: "altlocdb"
     networks:
-      - dev 
+      - dev
 
   minio:
     image: quay.io/minio/minio
@@ -26,14 +26,13 @@ services:
     volumes:
       - minio-data:/data
     networks:
-      - dev 
+      - dev
 
-  backend:
-    container_name: spring-backend  
-    build: 
+  altloc-backend:
+    build:
       context: .
       dockerfile: Dockerfile
-      target: backend
+      target: altloc-backend
     environment:
       SPRING_DATASOURCE_URL: "jdbc:postgresql://postgres:5432/altlocdb"
       SPRING_DATASOURCE_USERNAME: "dev"
@@ -54,7 +53,8 @@ services:
       - dev
 
 networks:
-  dev:  
+  dev:
+    external: true
 
 volumes:
   postgres-data:
